--- a/style.css
+++ b/style.css
@@ -115,9 +115,28 @@ body {
 
 #footer {
   background-color: var(--background-color);
+  transition: opacity 1s;
+}
+
+#footerStatus {
   display: flex;
   justify-content: space-around;
-  transition: opacity 1s;
+}
+
+.smaller {
+  font-size: 0.75em;
+}
+
+button {
+  margin-left: 1em;
+}
+
+#wordBank .table {
+  padding: 1em;
+  display: grid;
+  gap: 0.5em;
+  grid-auto-rows: auto;
+  grid-template-columns: repeat(10, auto);
 }
 
 .beSubtle {
